--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .main.container
+    h1= title
+    .row
+      .col-md-6.col-md-offset-3
+        form(method='POST' action='/api/urls/')
+          div.form-group
+            label(for='url') Input commodity URL
+            input.form-control(type='text' id='url' placeholder='http://' name='url')
+          button.btn.btn-primary(type='submit') Submit 
