--- a/views/index.pug
+++ b/views/index.pug
@@ -1,12 +1,13 @@
 extends layout
+block scripts
+  script(src="/javascripts/index.js")
 
 block content
   .main.container
     h1= title
     .row
       .col-md-6.col-md-offset-3
-        form(method='POST' action='/api/urls/')
-          div.form-group
-            label(for='url') Input commodity URL
-            input.form-control(type='text' id='url' placeholder='http://' name='url')
-          button.btn.btn-primary(type='submit') Submit 
+        div.form-group
+          label(for='url') Input commodity URL
+          input.form-control(type='text' id='url_input' placeholder='http://' name='url')
+        button.btn.btn-primary(type='submit' id='url_submit_btn') Submit 
