display url in homepage

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,4 +11,5 @@ block content
         div.form-group
           label(for='url') Input commodity URL
           input.form-control(type='text' id='url_input' placeholder='http://' name='url')
-        button.btn.btn-primary(type='submit' id='url_submit_btn') Submit 
+        button.btn.btn-primary(type='submit' id='url_submit_btn') Submit   
+      .col-md-6
