urllist_url element, add click event

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ extends layout
 block scripts
   script(src="/javascripts/base.js")
   script(src="/javascripts/index.js")
+  link(rel="stylesheet", href="../stylesheets/style.css")
 
 block content
   .main.container
