--- a/views/commodity.pug
+++ b/views/commodity.pug
@@ -5,9 +5,11 @@ block scripts
 
 block content
   .main.container
-    h1= title
+    h3= title
     p(class='hidden_id')= id
 
-    .row
-      .col-md-6.col-md-offset-3
-      .col-md-3
+    table(class='table table-striped')
+      tbody(id='commodity_tbody')
+        tr
+          th Price
+          th Date
