user browser session to save commodity url

--- a/views/commodity.pug
+++ b/views/commodity.pug
@@ -5,7 +5,7 @@ block scripts
 
 block content
   .main.container
-    h3= title
+    a(class='commodity_title')= title
     p(class='hidden_id')= id
 
     table(class='table table-striped')
