--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,7 @@ block content
     .row
       .col-md-6.col-md-offset-3
         div.form-group
-          input.form-control(type='text' id='url_input' placeholder='http://' name='url')
+          input.form-control(type='text' id='url_input' placeholder='https://' name='url')
       .col-md-3
         button.btn.btn-primary(type='submit' id='url_submit_btn') Submit   
     
