--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,3 +23,9 @@ a {
 .table tbody tr td{
     vertical-align: middle;
 }
+
+.table tbody tr td input {
+    display: table-cell;
+    width: 88%;
+    margin-right: 1rem;
+}
