modify button name

--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ block content
         div.form-group
           input.form-control(type='text' id='url_input' placeholder='https://' name='url')
       .col-md-3
-        button.btn.btn-primary(type='submit' id='url_submit_btn') Submit   
+        button.btn.btn-primary(type='submit' id='url_submit_btn') Add   
     
     table(class='table table-striped')
       thead
