--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,5 +11,6 @@ html
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js",integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1",crossorigin="anonymous")
     script(src="https://use.fontawesome.com/6432c3d5cc.js")
     block scripts
+    block style
   body
     block content
