--- a/public/stylesheets/commodity.css
+++ b/public/stylesheets/commodity.css
@@ -3,15 +3,15 @@
 		-webkit-user-select: none;
 		-ms-user-select: none;
 	}
-	.chart-container {
+	/* .chart-container {
 		width: 500px;
 		margin-left: 40px;
 		margin-right: 40px;
 		margin-bottom: 40px;
-	}
-	.container {
+	} */
+	/* .container {
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
 		justify-content: center;
-	}
+	} */
