add table after chart

--- a/views/commodity.pug
+++ b/views/commodity.pug
@@ -13,8 +13,8 @@ block content
     a(class='commodity_title')= title
     p(class='hidden_id')= id
 
-    table(class='table table-striped')
-      tbody(id='commodity_tbody')
-        tr
-          th Price
-          th Date
+    //- table(class='table table-striped')
+    //-   tbody(id='commodity_tbody')
+    //-     tr
+    //-       th Price
+    //-       th Date
